--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-commerce website with react js",
+  "name": "e-commerce-website-with-react-js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
