--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.11.0",
+    "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
+    "prettier": "^3.7.4",
     "vite": "^7.2.4"
   }
 }
